added fallback file

--- a/Folium_examples.ipynb
+++ b/Folium_examples.ipynb
@@ -223,7 +223,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "geojson = open('bezirksgrenzen.geojson').read()\n",
+    "geojson = open('data/bezirksgrenzen.geojson').read()\n",
     "geojson[:600]"
    ]
   },
@@ -282,7 +282,7 @@
     "                    tiles='CartoDB positron')\n",
     " \n",
     "berlin.choropleth(\n",
-    "    geo_data='bezirksgrenzen.geojson',\n",
+    "    geo_data='data/bezirksgrenzen.geojson',\n",
     "    name='chloropleth',\n",
     "    data=df,\n",
     "    columns=['district', 'value'],\n",
